第12次調整加入新頁面調整router-szeabur

--- a/shopping car back/views/test.html
+++ b/shopping car back/views/test.html
@@ -6,17 +6,19 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="/stepbrothers">首頁</a>
+    <a href="/home">首頁</a>
     <a href="/stepbrothers/man">男</a>
     <a href="/stepbrothers/woman">女</a>
     <a href="/stepbrothers/kid">童</a>
     <a href="/stepbrothers/about">關於</a>
-    <a href="/stepbrothers/user">使用者</a>
+    <a href="/userpage">使用者</a>
     <a href="/stepbrothers/shopping_history">歷史訂單</a>
     <a href="/stepbrothers/shopping_car">購物車</a>
-    <a href="/stepbrothers/login_page">登入頁</a>
+    <a href="/login">登入頁</a>
+    <a href="/stepbrothers/logout">登出</a>
     <a href="/stepbrothers/register_page">註冊頁</a>
     <a href="/stepbrothers/:id">單品項目</a>
+
     <!-- <a href=""></a>
     <a href=""></a> -->
   </body>
