--- a/shopping car back/views/test.html
+++ b/shopping car back/views/test.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="/home">首頁</a>
+    <a href="/">首頁</a>
     <a href="/stepbrothers/man">男</a>
     <a href="/stepbrothers/woman">女</a>
     <a href="/stepbrothers/kid">童</a>
