--- a/shopping car back/views/user_page.html
+++ b/shopping car back/views/user_page.html
@@ -40,7 +40,7 @@
   <body>
     <h1>User Information</h1>
     <nav>
-      <a href="/home">首頁</a>
+      <a href="/">首頁</a>
       <a href="/stepbrothers/man">男</a>
       <a href="/stepbrothers/woman">女</a>
       <a href="/stepbrothers/kid">童</a>
