--- a/shopping car back/views/home.html
+++ b/shopping car back/views/home.html
@@ -61,7 +61,7 @@
   </head>
   <body>
     <nav>
-      <a href="/">首頁</a>
+      <a href="/home">首頁</a>
       <a href="/stepbrothers/man">男</a>
       <a href="/stepbrothers/woman">女</a>
       <a href="/stepbrothers/kid">童</a>
