--- a/shopping car back/views/loginPage.html
+++ b/shopping car back/views/loginPage.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&family=Raleway:ital@1&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -23,6 +29,8 @@
         text-decoration: none;
         margin: 0 15px;
         font-size: 1.2rem;
+        font-family: 'Noto Sans TC', sans-serif;
+        font-family: 'Raleway', sans-serif;
       }
       .login-container {
         background-color: white;
@@ -33,6 +41,8 @@
         width: 300px;
         margin: auto;
         margin-top: 50px;
+        font-family: 'Noto Sans TC', sans-serif;
+        font-family: 'Raleway', sans-serif;
       }
       form {
         display: flex;
@@ -66,7 +76,6 @@
       <a href="/login">登入頁</a>
       <a href="/stepbrothers/logout">登出</a>
       <a href="/stepbrothers/register_page">註冊頁</a>
-      <a href="/stepbrothers/:id">單品項目</a>
     </nav>
     <div class="login-container">
       <h1>Login</h1>
