--- a/shopping car back/views/woman.html
+++ b/shopping car back/views/woman.html
@@ -94,9 +94,8 @@
       <a href="/man">男</a>
       <a href="/woman">女</a>
       <a href="/kid">童</a>
-      <a href="/stepbrothers/about">關於</a>
       <a href="/userpage">使用者</a>
-      <a href="/stepbrothers/shopping_history">歷史訂單</a>
+      <a href="/historyPage">歷史訂單</a>
       <a href="/stepbrothers/shopping_car">購物車</a>
       <a href="/login">登入頁</a>
       <a id="logout" href="/stepbrothers/logout">登出</a>
