--- a/shopping car back/views/loginPage.html
+++ b/shopping car back/views/loginPage.html
@@ -33,6 +33,8 @@
         font-family: 'Raleway', sans-serif;
       }
       .login-container {
+        display: flex;
+        flex-direction: column;
         background-color: white;
         padding: 20px;
         border-radius: 5px;
@@ -43,16 +45,21 @@
         margin-top: 50px;
         font-family: 'Noto Sans TC', sans-serif;
         font-family: 'Raleway', sans-serif;
+        align-items: center;
       }
       form {
+        width: 90%;
         display: flex;
         flex-direction: column;
+        align-items: center;
       }
       label,
       input {
         margin: 5px 0;
+        width: 90%;
       }
       button {
+        width: 90%;
         margin-top: 10px;
         padding: 5px 10px;
         background-color: #007bff;
@@ -60,6 +67,10 @@
         border: none;
         border-radius: 3px;
         cursor: pointer;
+      }
+
+      .login-container a {
+        width: 90%;
       }
     </style>
   </head>
@@ -74,7 +85,6 @@
       <a href="/stepbrothers/shopping_car">購物車</a>
       <a href="/login">登入頁</a>
       <a href="/stepbrothers/logout">登出</a>
-      <a href="/stepbrothers/register_page">註冊頁</a>
     </nav>
     <div class="login-container">
       <h1>Login</h1>
@@ -85,6 +95,7 @@
         <input type="password" id="password" name="password" required />
         <button type="submit">Login</button>
       </form>
+      <a href="/stepbrothers/register_page"><button>註冊頁</button></a>
     </div>
     <script>
       document.addEventListener('DOMContentLoaded', async function () {
