--- a/shopping car back/views/kids.html
+++ b/shopping car back/views/kids.html
@@ -96,7 +96,7 @@
       <a href="/kid">童</a>
       <a href="/userpage">使用者</a>
       <a href="/historyPage">歷史訂單</a>
-      <a href="/stepbrothers/shopping_car">購物車</a>
+      <a href="/shoppingCar">購物車</a>
       <a href="/login">登入頁</a>
       <a id="logout" href="/stepbrothers/logout">登出</a>
     </nav>
@@ -146,33 +146,35 @@
         }
       });
     </script>
+
     <script>
       // 獲取"登出"連結元素
       const logoutLink = document.getElementById('logout');
 
-      // 添加點擊事件處理程序
-      logoutLink.addEventListener('click', async (event) => {
-        event.preventDefault(); // 阻止默認的連結跳轉行為
+      // 點擊登出事件處理
+      logoutLink.addEventListener('click', (event) => {
+        event.preventDefault(); // 預防刷新
 
-        try {
-          // 發送登出請求到後端的'/stepbrothers/logout'路由
-          const response = await fetch('/stepbrothers/logout', {
-            method: 'GET', // 或 'POST'，取決於你的後端設置
+        fetch('/stepbrothers/logout', {
+          method: 'GET',
+        })
+          .then((response) => response.json())
+          .then((responseData) => {
+            console.log(responseData);
+            if (!responseData.login_status) {
+              alert('您尚未登入！');
+            } else if (responseData.login_status) {
+              // 如果登出成功，導向登入頁
+              alert('登出成功！');
+              window.location.href = '/login';
+            } else {
+              alert('登出失敗！');
+            }
+          })
+          .catch((error) => {
+            console.error('登出請求失敗：', error);
+            alert('登出失敗！');
           });
-
-          if (response.ok) {
-            // 如果登出成功，顯示成功消息
-            alert('登出成功！');
-            // 你可以在這裡添加額外的處理，例如重定向到登入頁面
-            window.location.href = '/login'; // 重定向到登入頁面，這部分可以根據你的需要調整
-          } else {
-            // 如果登出失敗，顯示錯誤消息
-            alert('登出失敗。');
-          }
-        } catch (error) {
-          console.error('登出請求失敗：', error);
-          alert('登出失敗。');
-        }
       });
     </script>
   </body>
