--- a/shopping car back/views/loginPage.html
+++ b/shopping car back/views/loginPage.html
@@ -82,9 +82,8 @@
       <a href="/kid">童</a>
       <a href="/userpage">使用者</a>
       <a href="/historyPage">歷史訂單</a>
-      <a href="/stepbrothers/shopping_car">購物車</a>
+      <a href="/shoppingCar">購物車</a>
       <a href="/login">登入頁</a>
-      <a href="/stepbrothers/logout">登出</a>
     </nav>
     <div class="login-container">
       <h1>Login</h1>
