更新登入頁、、router加入註冊頁

--- a/shopping car back/views/loginPage.html
+++ b/shopping car back/views/loginPage.html
@@ -88,13 +88,13 @@
     <div class="login-container">
       <h1>Login</h1>
       <form id="login-form">
-        <label for="username">Username:</label>
+        <label for="username">Account:</label>
         <input type="text" id="username" name="username" required />
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required />
         <button type="submit">Login</button>
       </form>
-      <a href="/stepbrothers/register_page"><button>註冊頁</button></a>
+      <a href="/register_page"><button>加入會員</button></a>
     </div>
     <script>
       document.addEventListener('DOMContentLoaded', async function () {
