--- a/shopping car back/views/shoppingCar.html
+++ b/shopping car back/views/shoppingCar.html
@@ -308,7 +308,7 @@
         );
       });
 
-      // 从购物车中移除商品
+      // 購物車移除商品
       async function removeFromCart(cartItemId) {
         try {
           const response = await fetch('/stepbrothers/delete_car', {
