修正登出鍵

--- a/shopping car back/views/registerPage.html
+++ b/shopping car back/views/registerPage.html
@@ -77,6 +77,8 @@
         type="text"
         id="new_phone_number"
         name="new_phone_number"
+        pattern="[0-9]{10}"
+        title="請輸入10位數電話號碼"
         required
       />
 
