修正登入卡

--- a/shopping car back/views/loginPage.html
+++ b/shopping car back/views/loginPage.html
@@ -146,7 +146,9 @@
                 window.location.href = '/userpage';
               } else {
                 // 處理登入失敗情況（例如，顯示錯誤消息）
-                alert('帳號或密碼錯誤');
+                alert(
+                  '帳號或密碼錯誤，重新再確認。或帳號已處於登入狀態，請重新嘗試登入'
+                );
               }
             } else {
               // 處理登入失敗情況（例如，顯示錯誤消息）
